# Test_task_FI

./: .gitignore  DEPLOY.md  Makefile  README.md  docker-compose.yml  nginx.conf
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
backend/core/api/: urls.py
backend/core/api/v1/: urls.py
backend/core/api/v1/DDS/: handlers.py  serializers.py  urls.py
backend/core/api/v1/auth/: handlers.py  serializers.py  urls.py
backend/core/apps/DDS/: admin.py  apps.py  services.py
backend/core/apps/DDS/models/: __init__.py  dds.py
backend/core/project/: urls.py
backend/core/project/settings/: main.py
backend/docker_compose/: app.yaml  storages.yaml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md
frontent/: Dockerfile  Untitled  index.html  nginx.conf  package-lock.json  package.json
frontent/src/: api.js  auth.js  config.js  main.js  style.css
